# bobafinder

./: .env.example  .gitignore  README.md  config.py  langgraph.json  main.py  pyproject.toml  test_voice.py  test_voice_unit.py
agents/: demographics.py  niche_finder.py  quantitative_analyst.py  reporter.py  scout.py  voice.py
tools/: __init__.py  analysis_tools.py  review_tools.py
